Fixed video flexbox alignments.

--- a/assets/bem-entities/center.css
+++ b/assets/bem-entities/center.css
@@ -1,4 +1,4 @@
-@media (min-width: 1440px) {
+@media (min-width: 1500px) {
   .center__1440 {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
