--- a/assets/bem-entities/reels.css
+++ b/assets/bem-entities/reels.css
@@ -1,20 +1,3 @@
-.aside_flex-item {
-  margin: 0 auto 3em auto;
-  width: 90%;
-}
-
-@media (min-width: 576px) {
-  .aside_flex-item {
-    width: 45%;
-  }
-}
-
-@media (min-width: 1500px) {
-  .aside_flex-item {
-    width: 50%;
-  }
-}
-
 .aside__img {
   background-position: center;
   background-repeat: no-repeat;
@@ -37,6 +20,7 @@
 }
 
 .aside__img-container {
+  margin-bottom: 3em;
   width: 100%;
 }
 
@@ -116,14 +100,13 @@
   background: #000;
 }
 
-.video-col {
-  margin: 0 auto;
-  width: 90%;
+.video-flexbox__flex-item_50 {
+  width: 100%;
 }
 
 @media (min-width: 576px) {
-  .video-col {
-    width: 45%;
+  .video-flexbox__flex-item_50 {
+    width: 50%;
   }
 }
 
@@ -134,11 +117,35 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 1.5em;
+  margin: 0 5% 1.5em 5%;
+}
+
+@media (min-width: 1500px) {
+  .video-flexbox {
+    margin: 0 0 1.5em 0;
+  }
+}
+
+.video-flexbox__aside {
+  margin: 0 auto;
+}
+
+@media (min-width: 576px) {
+  .video-flexbox__aside {
+    margin: 0 auto 0 0;
+    width: 95%;
+  }
 }
 
 .video-module {
-  margin-bottom: 3em;
+  margin: 0 auto 3em auto;
+}
+
+@media (min-width: 576px) {
+  .video-module {
+    margin: 0 0 3em auto;
+    width: 95%;
+  }
 }
 
 .video-module__title {
